--- a/languages/ci/locale/it_IT/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/it_IT/LC_MESSAGES/auberge_lang.po
@@ -8,10 +8,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-03 13:18+0300\n"
-"PO-Revision-Date: 2013-03-30 19:30+0200\n"
+"PO-Revision-Date: 2013-04-04 20:42+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -4873,6 +4872,9 @@ msgid ""
 "Please select the number of male, female and staff members of your group "
 "before sending your booking request."
 msgstr ""
+"Si prega di selezionare il numero di membri di sesso maschile, femminile e "
+"membri del personale del proprio gruppo prima di inviare la richiesta di "
+"prenotazione."
 
 #: ../code/application/views/group_request.php:15
 #: ../code/application/views/helpfile/pofields.php:144
