--- a/languages/ci/locale/ko_KR/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/ko_KR/LC_MESSAGES/auberge_lang.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-03 13:18+0300\n"
-"PO-Revision-Date: 2013-03-30 19:29+0200\n"
+"PO-Revision-Date: 2013-04-04 20:41+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -4730,6 +4729,7 @@ msgid ""
 "Please select the number of male, female and staff members of your group "
 "before sending your booking request."
 msgstr ""
+"예약 요청을 보내기 전에 단체의 남성, 여성과 멤버의 숫자를 선택하십시오."
 
 #: ../code/application/views/group_request.php:15
 #: ../code/application/views/helpfile/pofields.php:144
