--- a/languages/ci/locale/pt_BR/LC_MESSAGES/auberge_lang_ho.po
+++ b/languages/ci/locale/pt_BR/LC_MESSAGES/auberge_lang_ho.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-08 17:43+0300\n"
-"PO-Revision-Date: 2013-04-03 13:44+0200\n"
+"PO-Revision-Date: 2013-04-10 21:04+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "Language: fr\n"
@@ -1316,7 +1316,6 @@ msgid "Send email"
 msgstr "Enviar e-mail"
 
 #: ../code/application/views/includes/template-share-email-popup.php:84
-#, fuzzy
 msgid "Send PDF quote"
 msgstr "Enviar PDF"
 
@@ -7959,34 +7958,34 @@ msgid "Lowest night:"
 msgstr "Preço mais baixo por noite:"
 
 #: ../code/application/views/helpfile/pofields.php:760
-#, fuzzy, php-format
+#, php-format
 msgid "Number of guests for %d nights"
-msgstr "Número de hóspedes"
+msgstr "Número de hóspedes para %d noites"
 
 #: ../code/application/views/helpfile/pofields.php:761
-#, fuzzy, php-format
+#, php-format
 msgid "Provided after reservation"
-msgstr "Fazer comentário"
+msgstr "Fornecido após a reserva"
 
 #: ../code/application/views/helpfile/pofields.php:763
 #, php-format
 msgid "%d Bed Private Shared Bathroom"
-msgstr ""
+msgstr "%d Camas Individuais com Banheiro Compartilhado"
 
 #: ../code/application/views/helpfile/pofields.php:764
-#, fuzzy, php-format
+#, php-format
 msgid "Partially Available"
-msgstr "Estacionamento disponível"
+msgstr "Disponibilidade Parcial"
 
 #: ../code/application/views/helpfile/pofields.php:765
 #, php-format
 msgid "Standard Single Private Shared Bathroom"
-msgstr ""
+msgstr "Padrão Solteiro Individual com Banheiro Compartilhado"
 
 #: ../code/application/views/helpfile/pofields.php:766
-#, fuzzy, php-format
+#, php-format
 msgid "Show fully available only"
-msgstr "1 dormitório completo disponível."
+msgstr "Mostrar apenas os totalmente disponíveis"
 
 #: ../code/application/views/helpfile/pofields.php:767
 #, php-format
@@ -7995,6 +7994,9 @@ msgid ""
 "dates. You can select this filter to only see rooms with full availability "
 "for your stay."
 msgstr ""
+"Nós estamos mostrando quartos com disponibilidade total e parcial nas datas "
+"escolhidas. Você pode selecionar esse filtro para ver apenas os quartos com "
+"total disponibilidade para a sua estadia."
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
