--- a/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang_aj.po
+++ b/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang_aj.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-08 17:43+0300\n"
-"PO-Revision-Date: 2013-04-03 13:42+0200\n"
+"PO-Revision-Date: 2013-04-10 20:44+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
 "Language: es\n"
@@ -1316,7 +1316,6 @@ msgid "Send email"
 msgstr "Enviar email"
 
 #: ../code/application/views/includes/template-share-email-popup.php:84
-#, fuzzy
 msgid "Send PDF quote"
 msgstr "Enviar PDF"
 
@@ -7998,22 +7997,22 @@ msgstr "Entregada después de finalizar la reserva"
 #: ../code/application/views/helpfile/pofields.php:763
 #, php-format
 msgid "%d Bed Private Shared Bathroom"
-msgstr ""
+msgstr "Habitación Privada para %d personas con Baño Compartido"
 
 #: ../code/application/views/helpfile/pofields.php:764
-#, fuzzy, php-format
+#, php-format
 msgid "Partially Available"
-msgstr "Estacionamiento para carros disponible"
+msgstr "Parcialmente Disponible"
 
 #: ../code/application/views/helpfile/pofields.php:765
 #, php-format
 msgid "Standard Single Private Shared Bathroom"
-msgstr ""
+msgstr "Habitación Individual Estándar con Baño Compartido"
 
 #: ../code/application/views/helpfile/pofields.php:766
-#, fuzzy, php-format
+#, php-format
 msgid "Show fully available only"
-msgstr "1 dormitorio totalmente disponible."
+msgstr "Mostrar únicamente disponibilidad completa"
 
 #: ../code/application/views/helpfile/pofields.php:767
 #, php-format
@@ -8022,6 +8021,9 @@ msgid ""
 "dates. You can select this filter to only see rooms with full availability "
 "for your stay."
 msgstr ""
+"Mostramos todas las habitaciones disponibles, tanto de forma parcial como de "
+"forma completa para tu fecha seleccionada. Puedes usar este filtro para ver "
+"solo las habitaciones con disponibilidad completa para tu estancia."
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
