--- a/languages/ci/locale/hu_HU/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/hu_HU/LC_MESSAGES/auberge_lang.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-08 17:43+0300\n"
-"PO-Revision-Date: 2013-04-03 13:42+0200\n"
+"PO-Revision-Date: 2013-04-10 20:48+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -1300,7 +1299,6 @@ msgid "Send email"
 msgstr "E-mail küldése"
 
 #: ../code/application/views/includes/template-share-email-popup.php:84
-#, fuzzy
 msgid "Send PDF quote"
 msgstr "PDF küldése"
 
@@ -7883,29 +7881,29 @@ msgid "Number of guests for %d nights"
 msgstr "Vendégek száma %d éjszakára"
 
 #: ../code/application/views/helpfile/pofields.php:761
-#, fuzzy, php-format
+#, php-format
 msgid "Provided after reservation"
-msgstr "Áttekintés kérése"
+msgstr "Foglalás után megadva"
 
 #: ../code/application/views/helpfile/pofields.php:763
 #, php-format
 msgid "%d Bed Private Shared Bathroom"
-msgstr ""
+msgstr "%d egyéni szállás közös fürdőszobával"
 
 #: ../code/application/views/helpfile/pofields.php:764
-#, fuzzy, php-format
+#, php-format
 msgid "Partially Available"
-msgstr "Parkolási lehetőség"
+msgstr "Részben szabad"
 
 #: ../code/application/views/helpfile/pofields.php:765
 #, php-format
 msgid "Standard Single Private Shared Bathroom"
-msgstr ""
+msgstr "Standard egyéni szállás közös fürdőszobával"
 
 #: ../code/application/views/helpfile/pofields.php:766
-#, fuzzy, php-format
+#, php-format
 msgid "Show fully available only"
-msgstr "1 teljes mértékben szabad kollégiumi szoba."
+msgstr "Csak a teljesen szabad szobákat mutassa"
 
 #: ../code/application/views/helpfile/pofields.php:767
 #, php-format
@@ -7914,6 +7912,9 @@ msgid ""
 "dates. You can select this filter to only see rooms with full availability "
 "for your stay."
 msgstr ""
+"A megadott időpontokra részben és teljesen szabad szobák is rendelkezésre "
+"állnak.  Ezzel a szűrővel tudja beállítani, hogy csak a teljes mértékben "
+"szabad szobák jelenjenek meg."
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
