--- a/languages/ci/locale/ja_JP/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/ja_JP/LC_MESSAGES/auberge_lang.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-08 17:43+0300\n"
-"PO-Revision-Date: 2013-04-03 13:44+0200\n"
+"PO-Revision-Date: 2013-04-10 21:00+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -7802,22 +7801,22 @@ msgstr "予約後に提供されます。"
 #: ../code/application/views/helpfile/pofields.php:763
 #, php-format
 msgid "%d Bed Private Shared Bathroom"
-msgstr ""
+msgstr "%d名様用プライベートベッドルーム　共用バスルーム"
 
 #: ../code/application/views/helpfile/pofields.php:764
-#, fuzzy, php-format
+#, php-format
 msgid "Partially Available"
-msgstr "駐車場あります"
+msgstr "一部ご利用可能"
 
 #: ../code/application/views/helpfile/pofields.php:765
 #, php-format
 msgid "Standard Single Private Shared Bathroom"
-msgstr ""
+msgstr "お１人様用スタンダードベッドルーム　共用バスルーム"
 
 #: ../code/application/views/helpfile/pofields.php:766
-#, fuzzy, php-format
+#, php-format
 msgid "Show fully available only"
-msgstr "1部屋全てご予約可能のドーム。"
+msgstr "部屋全体が空室のものだけ表示"
 
 #: ../code/application/views/helpfile/pofields.php:767
 #, php-format
@@ -7826,6 +7825,8 @@ msgid ""
 "dates. You can select this filter to only see rooms with full availability "
 "for your stay."
 msgstr ""
+"選択した日付で満室、一部ご利用可能なお部屋を表示しています。フィルターで部屋"
+"全体が空室のものを選択できます。"
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
