--- a/languages/ci/locale/ko_KR/LC_MESSAGES/auberge_lang_ho.po
+++ b/languages/ci/locale/ko_KR/LC_MESSAGES/auberge_lang_ho.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-08 17:43+0300\n"
-"PO-Revision-Date: 2013-04-04 20:41+0200\n"
+"PO-Revision-Date: 2013-04-10 20:54+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -1293,7 +1292,6 @@ msgid "Send email"
 msgstr "이메일을 보내세요"
 
 #: ../code/application/views/includes/template-share-email-popup.php:84
-#, fuzzy
 msgid "Send PDF quote"
 msgstr "PDF 보내기"
 
@@ -7784,22 +7782,22 @@ msgstr "예약 후에 제공됨"
 #: ../code/application/views/helpfile/pofields.php:763
 #, php-format
 msgid "%d Bed Private Shared Bathroom"
-msgstr ""
+msgstr "공용 화장실을 쓰는 %d인 전용룸"
 
 #: ../code/application/views/helpfile/pofields.php:764
-#, fuzzy, php-format
+#, php-format
 msgid "Partially Available"
-msgstr "주차장"
+msgstr "부분적으로 가능"
 
 #: ../code/application/views/helpfile/pofields.php:765
 #, php-format
 msgid "Standard Single Private Shared Bathroom"
-msgstr ""
+msgstr "공용 화장실을 쓰는 스탠다드 싱글 전용룸"
 
 #: ../code/application/views/helpfile/pofields.php:766
-#, fuzzy, php-format
+#, php-format
 msgid "Show fully available only"
-msgstr "1개 전체를 사용할 수 있는 기숙사"
+msgstr "전체 사용 가능한 객실만 확인"
 
 #: ../code/application/views/helpfile/pofields.php:767
 #, php-format
@@ -7808,6 +7806,9 @@ msgid ""
 "dates. You can select this filter to only see rooms with full availability "
 "for your stay."
 msgstr ""
+"귀하의 날짜에  전체 및 부분적으로 사용 가능한 객실 모두를 게재하고 있습니다. "
+"귀하의 숙박을위한 전체  사용이 가능한 객실만을 표시하려면 이 필터를 선택할 "
+"수 있습니다."
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
