--- a/languages/ci/locale/zh_CN/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/zh_CN/LC_MESSAGES/auberge_lang.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-08 17:43+0300\n"
-"PO-Revision-Date: 2013-04-04 22:00+0200\n"
+"PO-Revision-Date: 2013-04-10 21:17+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -7651,22 +7650,22 @@ msgstr "预定后提供"
 #: ../code/application/views/helpfile/pofields.php:763
 #, php-format
 msgid "%d Bed Private Shared Bathroom"
-msgstr ""
+msgstr "%d人用的私人房间共用浴室 "
 
 #: ../code/application/views/helpfile/pofields.php:764
-#, fuzzy, php-format
+#, php-format
 msgid "Partially Available"
-msgstr "停车场可用"
+msgstr "只有部分空着的"
 
 #: ../code/application/views/helpfile/pofields.php:765
 #, php-format
 msgid "Standard Single Private Shared Bathroom"
-msgstr ""
+msgstr "标准单人间共用浴室"
 
 #: ../code/application/views/helpfile/pofields.php:766
-#, fuzzy, php-format
+#, php-format
 msgid "Show fully available only"
-msgstr "1整个宿舍空着。"
+msgstr "只显示全部空着的宿舍和私人房间"
 
 #: ../code/application/views/helpfile/pofields.php:767
 #, php-format
@@ -7675,6 +7674,7 @@ msgid ""
 "dates. You can select this filter to only see rooms with full availability "
 "for your stay."
 msgstr ""
+"显示的房间是在您停留期间完全和部分空闲的，您可以通过筛选显示完全空闲的房间。"
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
