--- a/languages/ci/locale/ru_RU/LC_MESSAGES/auberge_lang_yh.po
+++ b/languages/ci/locale/ru_RU/LC_MESSAGES/auberge_lang_yh.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-08 17:43+0300\n"
-"PO-Revision-Date: 2013-04-06 22:41+0200\n"
+"PO-Revision-Date: 2013-04-11 21:45+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -7945,19 +7944,19 @@ msgid "%d Bed Private Shared Bathroom"
 msgstr "Отдельная спальня для %d человек с общей ванной комнатой"
 
 #: ../code/application/views/helpfile/pofields.php:764
-#, fuzzy, php-format
+#, php-format
 msgid "Partially Available"
-msgstr "Парковка Доступна"
+msgstr "Частично доступные"
 
 #: ../code/application/views/helpfile/pofields.php:765
-#, fuzzy, php-format
+#, php-format
 msgid "Standard Single Private Shared Bathroom"
-msgstr "Отдельная спальня для %d человек с общей ванной комнатой"
+msgstr "Стандартный одноместный номер с общей ванной"
 
 #: ../code/application/views/helpfile/pofields.php:766
-#, fuzzy, php-format
+#, php-format
 msgid "Show fully available only"
-msgstr "1 полностью доступное общежитие."
+msgstr "Показать только полностью доступные"
 
 #: ../code/application/views/helpfile/pofields.php:767
 #, php-format
@@ -7966,6 +7965,9 @@ msgid ""
 "dates. You can select this filter to only see rooms with full availability "
 "for your stay."
 msgstr ""
+"Мы показываем номера с полной и частичной доступностью для вашей даты. Вы "
+"можете применить фильтр для отображения только полностью доступных номеров "
+"для вашего пребывания."
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
