--- a/languages/ci/locale/fi_FI/LC_MESSAGES/auberge_lang_ho.po
+++ b/languages/ci/locale/fi_FI/LC_MESSAGES/auberge_lang_ho.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-08 17:43+0300\n"
-"PO-Revision-Date: 2013-04-11 22:13+0200\n"
+"PO-Revision-Date: 2013-04-11 22:33+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -447,9 +447,9 @@ msgstr ""
 #: ../code/application/views/compare_property.php:353
 #: ../code/application/views/property_detail.php:146
 #: ../code/application/views/helpfile/pofields.php:623
-#, fuzzy, php-format
+#, php-format
 msgid "Map"
-msgstr "%s"
+msgstr "Kartta"
 
 #: ../code/application/views/search_results.php:6
 #: ../code/application/views/helpfile/pofields.php:227
@@ -3711,7 +3711,7 @@ msgstr "Vertaile kaikkia hostelleja kohteessa %s"
 #: ../code/application/views/mustache/property_list.php:126
 #, php-format
 msgid "Compare"
-msgstr ""
+msgstr "Vertaus"
 
 #: ../code/application/views/city_view.php:223
 #: ../code/application/views/helpfile/pofields.php:650
@@ -7253,74 +7253,74 @@ msgid "Next available property"
 msgstr "Ei vapaita huoneita tässä majoituspaikassa."
 
 #: ../code/application/views/helpfile/pofields.php:610
-#, fuzzy, php-format
+#, php-format
 msgid "Group Type:"
-msgstr "Ryhmät"
+msgstr "Ryhmä Tyyppi:"
 
 #: ../code/application/views/helpfile/pofields.php:611
-#, fuzzy, php-format
+#, php-format
 msgid "Age Ranges:"
-msgstr "Hintaluokka:"
+msgstr "Ikä Rajat:"
 
 #: ../code/application/views/helpfile/pofields.php:612
 #, php-format
 msgid "Choose one..."
-msgstr ""
+msgstr "Valitse Yksi…"
 
 #: ../code/application/views/helpfile/pofields.php:613
 #, php-format
 msgid "Holidays with friends"
-msgstr ""
+msgstr "Loma ystävien kanssa"
 
 #: ../code/application/views/helpfile/pofields.php:614
 #, php-format
 msgid "Junior/Primary school"
-msgstr ""
+msgstr "Ala asteen koulu"
 
 #: ../code/application/views/helpfile/pofields.php:615
 #, php-format
 msgid "High/Secondary school"
-msgstr ""
+msgstr "Ylä asteen koulu"
 
 #: ../code/application/views/helpfile/pofields.php:616
 #, php-format
 msgid "College / University"
-msgstr ""
+msgstr "Yliopisto"
 
 #: ../code/application/views/helpfile/pofields.php:617
-#, fuzzy, php-format
+#, php-format
 msgid "Business trip"
-msgstr "Liikematkat"
+msgstr "Liiketoiminta matka"
 
 #: ../code/application/views/helpfile/pofields.php:618
 #, php-format
 msgid "Stag/Hen/Bachelor party"
-msgstr ""
+msgstr "Polttarit"
 
 #: ../code/application/views/helpfile/pofields.php:619
-#, fuzzy, php-format
+#, php-format
 msgid "Sports group"
-msgstr "Urheiluryhmät"
+msgstr "Urheilu ryhmä"
 
 #: ../code/application/views/helpfile/pofields.php:620
 #, php-format
 msgid "Cultural group"
-msgstr ""
+msgstr "Kultuuri ryhmä"
 
 #: ../code/application/views/helpfile/pofields.php:621
 #, php-format
 msgid "Please specify a type of group."
-msgstr ""
+msgstr "Ole hyvä ja määrittele ryhmä."
 
 #: ../code/application/views/helpfile/pofields.php:622
 #, php-format
 msgid "Please specify an age range for your group."
-msgstr ""
+msgstr "Ole hyvä ja määrittele ryhmän ikä rajat."
 
 #: ../code/application/views/helpfile/pofields.php:625
-#, fuzzy, php-format
+#, php-format
 msgid "Reviews"
-msgstr "Arvostelu"
+msgstr "Arvostelut"
 
 #: ../code/application/views/helpfile/pofields.php:627
 #, php-format
