Phone number fr_ca

--- a/languages/ci/locale/fr_CA/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/fr_CA/LC_MESSAGES/auberge_lang.po
@@ -4168,7 +4168,7 @@ msgstr ""
 "assurer que vos informations sur la méthode de paiement sont exactes ou "
 "utiliser une carte de crédit différente (meme si elle n'est pas celle que "
 "vous allez emmener en voyage). Si le problème persiste, veuillez communiquer "
-"avec nous au +33-(0)975171132 ou à l'adresse suivante : %s"
+"avec nous au 0 800 907761 ou à l'adresse suivante : %s"
 
 #: ../code/application/views/hw/booking_view.php:90
 #: ../code/application/views/hw/booking_view.php:1015
