--- a/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
+++ b/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
@@ -4,7 +4,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-08 17:43+0300\n"
 "PO-Revision-Date: \n"
-"Last-Translator: Iana <hrapulya@gmail.com>\n"
+"Last-Translator: Jerome Curlier <jeromecurlier@mcwebamangement.com>\n"
 "Language-Team: \n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
@@ -8005,7 +8005,7 @@ msgstr "La nuit la moins chère :"
 #: ../code/application/views/helpfile/pofields.php:760
 #, php-format
 msgid "Number of guests for %d nights"
-msgstr "Nombre de personnes for %d nuits"
+msgstr "Nombre de personnes pour %d nuits"
 
 #: ../code/application/views/helpfile/pofields.php:761
 #, php-format
