--- a/languages/ci/locale/fr_CA/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/fr_CA/LC_MESSAGES/auberge_lang.po
@@ -7547,7 +7547,7 @@ msgstr "Pas assez de paramètres"
 #: ../code/application/controllers/cmain.php:1673
 #, php-format
 msgid "Fill in the email"
-msgstr "Remplissez l'email"
+msgstr "Remplissez l'adresse email"
 
 #: ../code/application/views/helpfile/pofields.php:662
 #: ../code/application/controllers/cmain.php:1677
@@ -8031,14 +8031,14 @@ msgstr ""
 "les dortoirs et chambres avec une disponibilité complete pour votre séjour."
 
 #: ../code/application/views/helpfile/pofields.php:768
-#, fuzzy, php-format
+#, php-format
 msgid "Email is not valid"
-msgstr "Pays non valide"
+msgstr "E-mail non valide"
 
 #: ../code/application/views/helpfile/pofields.php:772
-#, fuzzy, php-format
+#, php-format
 msgid "Fill in the from name"
-msgstr "Remplissez le nom dans le champ \"De\""
+msgstr "Remplissez l'info destinataire"
 
 #: ../code/application/views/helpfile/pofields.php:773
 #, php-format
